# piped-gtk

./: .gitignore  Cargo.toml  api.py
src/: main.rs
src/api/: client.rs  mod.rs  structure.rs
