[package]
name = "yt-gtk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.136", features=["derive"] }
serde_json = "1.0.59"
http-cache-reqwest = "0.4.2"
reqwest-middleware = "0.1.5"
bytes = "1.1.0"
#gtk = { version = "0.4.6" , package = "gtk4" }
